Make the timeline feed use plain cards as the outmost card, this looks better with the way inline cards within an event is rendered.

--- a/src/app/pages/profile/profile-notes/profile-notes.component.html
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.html
@@ -16,7 +16,7 @@
       } @else {
         <div class="notes-list">
           @for (item of profileState.sortedTimeline(); track item.event.id || $index) {
-            <app-event [event]="item.event" appearance="card"></app-event>
+            <app-event [event]="item.event" appearance="plain"></app-event>
           }
 
           <!-- Loading more indicator -->
