feat: Fix hover card functionality in article preview by updating directive usage and resolving flickering issues

--- a/src/app/pages/article/editor/editor.component.html
+++ b/src/app/pages/article/editor/editor.component.html
@@ -85,7 +85,7 @@
               <img [src]="article().image" [attr.alt]="article().title || 'Article featured image'"
                 [attr.title]="article().title || 'Article featured image'" class="preview-image" loading="lazy" />
               }
-              <div class="preview-markdown">
+              <div class="preview-markdown" appMentionHover>
                 <div [innerHTML]="markdownHtml()"></div>
               </div>
             </div>
