fix: Correct build info paragraph class and remove unused color styles

--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -16,7 +16,8 @@
           <h1>About Nostria</h1>
           <h3>Version: {{ version() }}</h3>
           @if (buildDate()) {
-          <p class="build-info">Built on: {{ buildDate() }}</p>
+          <p class=".build-info
+          ">Built on: {{ buildDate() }}</p>
           }
           @if (commitShort() && commitSha()) {
           <p class="build-info">
