feat: Implement hover card functionality for profile display name with mouse events

--- a/src/app/components/user-profile/display-name/profile-display-name.component.html
+++ b/src/app/components/user-profile/display-name/profile-display-name.component.html
@@ -1,4 +1,5 @@
-<span>
+<a [routerLink]="['/p', npubValue()]" class="profile-link" (mouseenter)="onMouseEnter($event)"
+  (mouseleave)="onMouseLeave()">
   @if (isLoading() || profile() === null) {
   ...
   } @else if (profile() && !profile().isEmpty && profile().data) {
@@ -12,4 +13,4 @@
   } @else {
   {{ truncatedNpubValue() }}
   }
-</span>
+</a>
