--- a/src/app/components/user-profile/display-name/profile-display-name.component.scss
+++ b/src/app/components/user-profile/display-name/profile-display-name.component.scss
@@ -1,6 +1,7 @@
 :host {
-  display: block;
-  width: 100%;
+  display: inline-block;
+  max-width: 100%;
+  vertical-align: baseline;
 }
 
 span {
@@ -9,4 +10,22 @@ span {
   text-overflow: ellipsis;
   display: block;
   width: 100%;
+}
+
+.profile-link {
+  display: inline;
+  white-space: nowrap;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+
+  &:hover {
+    opacity: 0.8;
+    text-decoration: underline;
+  }
+
+  &:visited {
+    color: inherit;
+  }
 }
